# pdfparser-fast

./: .pre-commit-config.yaml  Basic idea for the purpose of my exercise.drawio  Dockerfile  README.md  buglog.md  docker-compose.yaml  pyproject.toml  solution.md
src/: setup.py
src/pdfparser/: config.py  create_tables.py  flask_app.py  model.py  orm.py  schema.sql  services.py  sqlmodel.py
tests/: conftest.py
tests/e2e/: test_flask.py
tests/integration/: test_repository.py
tests/unit/: test_parser.py
