[tool.poetry]
name = "python-backend-challenge"
version = "0.1.0"
description = ""
authors = ["David Walling <david@alaffia.io>"]
readme = "README.md"
packages = [{include = "src/pdfparser"}]

[tool.poetry.dependencies]
python = "^3.10"
PyMuPDF = "^1.24.0"
pytest = "^8.1.1"
psycopg2 = "^2.9.9"
pre-commit = "^3.7.0"
flask = "^3.0.3"
sqlalchemy = "^2.0.29"
pathlib = "^1.0.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--tb=short"
]
pythonpath = [
  "src"
]
filterwarnings = "ignore::DeprecationWarning"